services/analytics-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-api
spec:
  type: ClusterIP
  selector:
    app: analytics-api
  ports:
    - port: 8001
      targetPort: 8001
