services/analytics-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-api
spec:
  tls:
    - hosts:
        - analytics-api.sXXXXXXX-at-student-dhbw-mannheim-de.users.dhbw.site
  rules:
    - host: analytics-api.sXXXXXXX-at-student-dhbw-mannheim-de.users.dhbw.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: analytics-api
                port:
                  number: 8001
